# stundenplan24-wrapper

./: README.md  creds.json  pyproject.toml  requirements.txt  test.py
src/stundenplan24_py/: __init__.py  client.py  crawler.py  endpoints.py  errors.py  indiware_mobil.py  indiware_substitution_plan.py  proxies.py  shared.py  substitution_plan.py  util.py
stundenplan24_py/: __init__.py  client.py  indiware_mobil.py  iw_mobil.py  substitution_plan.py  vp_mobil.py
stundeplan24_py/: __init__.py  client.py
