[project]
name = "stundenplan24-wrapper"
version = "1.5.1"
description = "A wrapper for the Stundenplan24 APIs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}