[project]
name = "stundenplan24-wrapper"
version = "7.0.7"
description = "A wrapper for the Stundenplan24 APIs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}